# tim

./: .gitignore  Cargo.toml  README.md  create_bundle.sh
src/: audio.rs  input_device_event.rs  keyboard_event.rs  main.rs  menu_bar.rs  status_bar.rs  window_manager.rs
src/buttons/: mod.rs  set_button.rs  start_button.rs
src/traits/: convert_countdown.rs  mod.rs
