[package]
name = "tim"
version = "0.3.0"
edition = "2021"
description = ""

[dependencies]
fltk = "1.3.18"
fltk-theme = "0.7.0"
rodio = "0.17.1"

[package.metadata.bundle]
name = "Tim"
identifier = "com.ddno.tim"
icon = ["assets/timer.png"]
resources = ["assets/*.wav", "assets/*.mp3"]
category = "Utility"
