[package]
name = "tim"
version = "0.6.0"
edition = "2021"
description = ""

[dependencies]
fltk = "1.3.18"
fltk-theme = "0.7.0"
rodio = "0.17.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[package.metadata.bundle]
name = "Tim"
identifier = "com.ddno.tim"
icon = ["assets/timer.png"]
resources = ["assets/*.wav", "assets/*.mp3"]
category = "Utility"
