[package]
name = "tim"
version = "0.7.1"
edition = "2021"
description = ""

[dependencies]
fltk = "1"
fltk-theme = "0.7"
rodio = "0.17"
webbrowser = "0.8.13"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[package.metadata.bundle]
name = "Tim"
identifier = "com.ddno.tim"
icon = ["assets/timer.png"]
resources = ["assets/*.wav", "assets/*.mp3"]
category = "Utility"
